# phys_opengl

./: .gitignore  BallPhys.sln  CMakeLists.txt  README.md  premake5.lua
BallPhys/: BallPhys.vcxproj  BallPhys.vcxproj.filters
BallPhys/res/shaders/: basicFrag.shader  basicVert.shader  celFrag.shader  celVert.shader
BallPhys/src/: Application.cpp  Camera.cpp  Camera.h  GLLog.h  Icosphere.cpp  Icosphere.h  IndexBuffer.cpp  IndexBuffer.h  Physics.cpp  Physics.h  Random.cpp  Random.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
depend/GLFW/: GLFW.vcxproj  premake5.lua
depend/glad/: Glad.vcxproj  premake5.lua
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
depend/stb_image/: premake5.lua  stb_image.vcxproj
